Fix icon-sm vertical-align causing toggle misalignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,6 @@ hr {
 
 .icon-sm {
   font-size: 16px;
-  vertical-align: middle;
 }
 
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
